//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  email String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  createdByUserId String
  updatedAt DateTime [not null]
  updatedByUserId String
}

Table Account {
  userId String [not null]
  channelType ChannelType [not null]
  channelToken String [not null]
  verifiedAt DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]

  indexes {
    (userId, channelType) [pk]
  }
}

Table Otp {
  id Int [pk, increment]
  otpCode String [not null]
  createdAt DateTime [default: `now()`, not null]
  expiredAt DateTime [not null]
  verifiedAt DateTime
  userId String
  channelType ChannelType
}

Table Channel {
  channelType ChannelType [pk]
  messageType MessageType [not null]
}

Table Application {
  id String [pk]
  name String [not null]
  description String [not null]
  apiKey String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  createdByUserId String [not null]
  updatedAt DateTime [not null]
  updatedByUserId String [not null]
}

Table NotificationCategory {
  id String [pk]
  applicationId String [not null]
  name String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  createdByUserId String [not null]
  updatedAt DateTime [not null]
  updatedByUserId String [not null]
  deletedAt DateTime
  deletedByUserId String
}

Table Notification {
  id Int [pk, increment]
  applicationId String [not null]
  notificationCategoryId String [not null]
  templateId String [not null]
  templateData String [not null]
  priority Priority [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table NotificationRecipient {
  notificationId Int [not null]
  userId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]

  indexes {
    (notificationId, userId) [pk]
  }
}

Table CompiledMessage {
  notificationId Int [not null]
  templateId String [not null]
  messageType MessageType [not null]
  compiledMessage String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]

  indexes {
    (notificationId, templateId, messageType) [pk]
  }
}

Table NotificationTask {
  id Int [pk, increment]
  channelToken String [not null]
  channelType ChannelType [not null]
  userId String [not null]
  notificationId Int [not null]
  templateId String [not null]
  messageType MessageType [not null]
  priority Priority [not null]
  sentStatus SentStatus [not null, default: 'PENDING']
  sentTimestamp DateTime
  failedTimestamp DateTime
  retryCount Int [not null, default: 0]
  retryLimit Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Template {
  id String [pk]
  name String [not null]
  template String [not null]
  createdAt DateTime [default: `now()`, not null]
  createdByUserId String [not null]
  updatedAt DateTime [not null]
  updatedByUserId String [not null]
  deletedAt DateTime
  deletedByUserId String
}

Table CompiledTemplate {
  templateId String [not null]
  messageType MessageType [not null]
  compiledTemplate String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]

  indexes {
    (templateId, messageType) [pk]
  }
}

Table UserPreference {
  userId String [not null]
  notificationCategoryId String [not null]
  channelType ChannelType [not null]
  isPreferred Boolean [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]

  indexes {
    (userId, channelType, notificationCategoryId) [pk]
  }
}

Enum MessageType {
  HTML
  MARKDOWN
  TEXT
}

Enum Priority {
  LOW
  MEDIUM
  HIGH
}

Enum SentStatus {
  PENDING
  RETRY
  SENT
  FAILED
}

Enum ChannelType {
  EMAIL
  SMS
  SLACK
}

Ref: User.createdByUserId - User.id

Ref: User.updatedByUserId - User.id

Ref: Account.userId > User.id

Ref: Account.channelType > Channel.channelType

Ref: Otp.userId > User.id [delete: No Action]

Ref: Otp.channelType > Channel.channelType [delete: No Action]

Ref: Otp.(userId, channelType) > Account.(userId, channelType) [delete: Set Null]

Ref: Application.createdByUserId > User.id

Ref: Application.updatedByUserId > User.id

Ref: NotificationCategory.createdByUserId > User.id

Ref: NotificationCategory.updatedByUserId > User.id

Ref: NotificationCategory.deletedByUserId > User.id

Ref: NotificationCategory.applicationId > Application.id

Ref: Notification.applicationId > Application.id

Ref: Notification.notificationCategoryId > NotificationCategory.id

Ref: Notification.templateId > Template.id

Ref: NotificationRecipient.notificationId > Notification.id

Ref: NotificationRecipient.userId > User.id

Ref: CompiledMessage.notificationId > Notification.id

Ref: CompiledMessage.(templateId, messageType) > CompiledTemplate.(templateId, messageType)

Ref: NotificationTask.channelType > Channel.channelType

Ref: NotificationTask.userId > User.id

Ref: NotificationTask.notificationId > Notification.id

Ref: NotificationTask.templateId > Template.id

Ref: NotificationTask.(notificationId, templateId, messageType) > CompiledMessage.(notificationId, templateId, messageType)

Ref: Template.createdByUserId > User.id

Ref: Template.updatedByUserId > User.id

Ref: CompiledTemplate.templateId > Template.id

Ref: UserPreference.userId > User.id

Ref: UserPreference.notificationCategoryId > NotificationCategory.id

Ref: UserPreference.channelType > Channel.channelType